[build-system]
requires = ['setuptools>=61', 'wheel']
build-backend = 'setuptools.build_meta'

[project]
name = 'jax_forward_laplacian'
version = '0.1'
description = 'JAX implementation of the forward Laplacian operator'
authors = [
    {name = "Nicholas Gao", email = "ngao@tum.de"},
    {name = "Jonas Koehler", email = "jonas.koehler@microsoft.com"},
    {name = "Adam Foster", email = "adam.e.foster@microsoft.com"},
]
maintainers = [
    {name = "Nicholas Gao", email = "ngao@tum.de"},
    {name = "Jonas Koehler", email = "jonas.koehler@microsoft.com"},
]

[tool.poetry]
readme = 'README.md'
license = {text = 'MIT'}
keywords = ["jax", "laplacian", "numeric"]
classifiers = [
    'Development Status :: 4 - Beta',
    'Environment :: Console',
    'Environment :: GPU :: NVIDIA CUDA',
    'Intended Audience :: Science/Research',
    'Operating System :: MacOS :: MacOS X',
    'Operating System :: POSIX :: Linux',
    'Topic :: Scientific/Engineering :: Artificial Intelligence',
    'Topic :: Scientific/Engineering :: Chemistry',
    'Topic :: Scientific/Engineering :: Physics',
    'Programming Language :: Python :: 3.10',
    'Programming Language :: Python :: 3.11'
]
requires-python = ">=3.10"
dependencies = [
    'jax',
    'jaxlib',
    'jaxtyping',
    'jax-dataclasses',
    'numpy',
    'pytest',
]

[project.optional-dependencies]
dev = []

[project.urls]
repository = 'https://github.com/microsoft/jax-forward-laplacian'
